--- a/src/content/docs/book/part-2-organised-code/6-indirect-access/5-reference/02-00-heap.md
+++ b/src/content/docs/book/part-2-organised-code/6-indirect-access/5-reference/02-00-heap.md
@@ -54,6 +54,14 @@ These are the two basic actions that exist for performing dynamic memory managem
 
 :::
 
+## Allocating _objects_ on the heap
+
+In earlier languages such as C, the two operations above are the main ways you manage dynamic memory. We will look at them in more depth in the [next chapter](/book/part-2-organised-code/7-deep-dive-memory/0-overview/), but for now let's see how C++ handles it.
+
+In C++, the operations are framed differently. Rather than allocating raw chunks of more memory, you create and delete _objects_ instead. Many other modern languages also handle it in a similar way.
+
+We will explore this on the [next page](/book/part-2-organised-code/6-indirect-access/5-reference/02-01-new-delete/).
+
 ## Accessing dynamically allocated memory
 
 By its very nature, dynamic memory allocation must work a little differently to the way we have been working with values so far. So far, when you wanted to work with a value you declared a variable, or an array. This would have been a [local variable](/book/part-2-organised-code/1-structuring-code/5-reference/03-local-variable), with its value allocated on the stack along with the other variables you were working with in the current function or procedure. The variable and its value can be seen as one, with the value being located within the variable. With dynamic memory allocation, the values you are allocated are on the heap. This means that their values are not bound within a variable, they exist entirely outside any variables that appears in your code.
@@ -64,7 +72,7 @@ This raises one very important question, as illustrated in [Figure x.y](#FigureA
 
 > If the values exist outside of variables, how do you access them?
 
-The answer to this is via [pointers](/book/part-2-organised-code/6-indirect-access/5-reference/02-00-pointer). As we have seen, pointers allow you to store a value that tells you where the data you want is located. We have used this to access variables stored in other functions/procedures on the stack, and we can use these now to also access values on the heap.
+The answer to this is via [pointers](/book/part-2-organised-code/6-indirect-access/5-reference/01-00-pointer). As we have seen, pointers allow you to store a value that tells you where the data you want is located. We can use this to access variables stored in other functions/procedures on the stack (as we have previously with references), and we can use these now to also access values on the heap.
 
 <a id="FigureAccessingMemory"></a>
 
