Add C3 overview video

--- a/src/content/docs/book/part-1-instructions/2-data/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/0-overview.mdx
@@ -3,8 +3,13 @@ title: Overview of Data
 sidebar:
   label: Overview
 ---
+import { YouTube } from 'astro-embed';
 
-So far our programs contain a sequence of instructions. These foundations are important, but our programs always do the same thing as there is no way of things changing in our program.
+<div class="not-content">
+  <YouTube id="gA4peRq5JO0" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
+So far our programs contain a sequence of instructions. These foundations are important, but a bit limiting, as our programs will always do the same thing. Let's explore how we can change that.
 
 At the end of this trek, make sure you:
 
@@ -13,5 +18,4 @@ At the end of this trek, make sure you:
   - Variables to store values that change.
   - Assignment statements to store values in variables.
   - Function calls to calculate values.
-
 - Demonstrate how the different statements work, and interact with values in memory.
