--- a/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/01-7-generalised-visiting-2.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/01-7-generalised-visiting-2.mdx
@@ -289,13 +289,13 @@ Note: It's still quite useful to have a `fold` function, since it allows us to e
     }));
 ```
 
-However, we could _implement_ fold using `visit` now!
+However, we could _implement_ `fold` using `visit` now!
 :::
 
 This way of using lambdas gives us the ability to write some really powerful and general code!
 
 :::tip[How do lambdas work?]
-Lambdas are secretly classes!
+Lambdas are secretly objects!
 
 As an example, this lambda:
 
