Remove printf from pointer & lists, and deep dive memory

--- a/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/02-1-maze-movement.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/02-1-maze-movement.mdx
@@ -82,7 +82,7 @@ I achieved this with the following code.
     explore(current_room);
   }
 
-  printf("You have reached the end of the maze!\n");
+  write_line("You have reached the end of the maze!");
   current_room->print_room();
 ```
 
