Add C3 functions video

--- a/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/1-functions.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/1-functions.mdx
@@ -3,7 +3,11 @@ title: Functions
 ---
 import { YouTube } from 'astro-embed';
 
-See how to call functions to calculate values, and use these within your programs.
+<div class="not-content">
+  <YouTube id="WbO4SEu2laQ" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
+Functions are used to calculate values, and they're v how you can use them in your programs.
 
 Watch this video to:
 
