Add C3 assignment statement video

--- a/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/3-assignment.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/3-assignment.mdx
@@ -3,10 +3,15 @@ title: Using Assignment
 ---
 import { YouTube } from 'astro-embed';
 
+<div class="not-content">
+  <YouTube id="V2UeI95HUyM" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
 Now that we have a variable, let's see how to update its value.
 
 Watch this video to:
 
-- Assign a value to a variable.
+- Get started using the assignment statement.
+- Use the assignment statement to assign a value to a variable.
 
-Next, move on to see how to use the value you stored.
+After this video you should be ready to use dynamic values within your programs.
