--- a/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/1-functions.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/1-functions.mdx
@@ -7,10 +7,10 @@ import { YouTube } from 'astro-embed';
   <YouTube id="WbO4SEu2laQ" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-Functions are used to calculate values, and they're v how you can use them in your programs.
+Functions are used to calculate values, which is very useful for creating interesting programs.
 
 Watch this video to:
 
 - See how to call functions and use the value they return.
 
-Next we look at functions from SplashKit and how you can use them.
+When you have gone through this video you should be able to call functions in your programs.
