--- a/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/2-variables.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/2-intro-tour/2-variables.mdx
@@ -3,11 +3,15 @@ title: Variables
 ---
 import { YouTube } from 'astro-embed';
 
-Next we look at how to make use of variables to store values that may change during execution. A good place to start with this is to consider how we can accept user input into our programs.
+<div class="not-content">
+  <YouTube id="kgTxYPXmZ20" params="fs=1&modestbranding=1&rel=0"/>
+</div>
+
+Variables are used to store values that may change while your program is running. A good place to start with this is to use variables to accept input from the user.
 
 Watch this video to:
 
 - Get started declaring and using variables.
-- See how to use functions to calculate values.
+- See how to use functions to calculate values to store in variables.
 
 When you are done, you should be able to create variables in your code and have a mental model of what is occurring.
